<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DMap</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_setting">Cài đặt</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Cài đặt</string>
    <string name="title_activity_info">Thông tin về Dmap</string>
    <string name="title_activity_search"></string>
    <string name="title_activity_book_mark"></string>
    <string name="title_activity_routes"></string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_activity_feedback">Thông tin phản hồi</string>
    <string name="title_activity_tab_layout">Chi tiết</string>
    <string name="title_activity_detail_and_feed_back_actitivty">Details</string>
    <string name="title_activity_guide">Đo khả năng tiếp cận</string>
    <string name="title_activity_add_feedback">Thêm phản hồi</string>
    <string name="title_activity_drdstaff">Thêm điểm tiếp cận</string>
    <string name="title_activity_end_user">Thêm điểm tiếp cận</string>
    <string name="title_activity_tab_feedback">TabFeedbackActivity</string>
    <string name="title_activity_tab_detail">Chi tiết địa điểm</string>
    <string name="title_activity_drd__save_list"></string>
    <string name="title_activity_end_user__save_list"></string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search</string>
    <string name="text_input_text">Nhập thông tin</string>
    <string name="label_location_information">Thông tin địa điểm</string>
    <string name="label_location_name">Tên địa điêm</string>
    <string name="label_location_address">Địa chỉ</string>
    <string name="label_location_phone">Số điện thoại</string>
    <string name="label_location_category">Loại địa điểm</string>
    <string name="label_username"></string>
    <string name="label_password"></string>
    <string name="label_userphone">Số điện thoại của bạn</string>
    <string name="label_radius">Bán kính</string>
    <string name="label_save_button">Lưu</string>
    <string name="label_routes_button">Lộ trình</string>
    <string name="label_post_button">Gửi cho admin</string>
    <string name="label_motorbike_button">Xe máy</string>
    <string name="label_bus_button">Xe buýt</string>
    <string name="label_bookmark_button">Thêm vào danh sách</string>
    <string name="label_update_button">Cập nhật dữ liệu</string>
    <string name="label_share_button">Thêm điểm tiếp cận</string>
    <string name="label_guide_button">Đo khả năng tiếp cận</string>
    <string name="label_List_button">Danh sách địa điểm</string>
    <string name="label_postAll_button">Gửi hết</string>
    <string name="label_language">Ngôn ngữ</string>
    <string name="label_from">Đi từ</string>
    <string name="label_to">Đến</string>
    <string name="label_find_route">Tìm lộ trình</string>
    <string name="label_cancel_button">Huỷ</string>
    <string name="label_current_position">Địa điểm của bạn</string>
    <string name="alert_success_title">Thành công</string>
    <string name="alert_save_data">Dữ liệu đã được lưu</string>
    <string name="alert_adding_success">Địa điểm đã được thêm vào danh sách</string>
    <string name="marker_title_walking">Đi bộ</string>
    <string name="share_location_select_button">-Lựa chọn-</string>
    <string name="app_language_title_vi">Tiếng Việt</string>
    <string name="app_language_title_en">Tiếng Anh</string>
    <string name="button_setting_help_title">Giúp đỡ</string>
    <string name="button_setting_info_title">Thông tin</string>
    <string name="title_activity_info_setting">DMap</string>
    <string name="alert_loading_title">Xin chờ</string>
    <string name="alert_download_message">Dữ liệu của bạn đang được tải về</string>
    <string name="alert_ok_title">Đồng ý</string>
    <string name="title_activity_dmap_location_type_setting">Loại địa điểm
    </string>
    <string name="locationType_setting_On">On</string>
    <string name="title_activity_about">Thông tin</string>
    <string name="about_drd_title">Trung tâm Khuyết tật và phát triển</string>
    <string name="about_drd_description">Trung tâm Khuyết tật và phát triển (DRD) tại Thành phố Hồ Chí Minh là một tổ chức phi lợi nhuận bảo vệ quyền lợi của người khuyết tật. DRD xây dựng mô hình hỗ trợ đem lại bình đẳng cho người khuyết tật,khuyến khích và tạo điều kiện cho họ tham gia vào tất cả các hoạt động như những công dân khác trong xã hội.</string>
    <string name="about_hoasen_title">Đối tác chính: Đại học Hoa Sen</string>
    <string name="about_hoasen_description">
Hoa Sen là trường đại học tư thục phi lợi nhuận được thành lập vào năm 1991. Đại học Hoa Sen cam kết chuẩn bị cho sinh viên những kỹ năng học tập suốt đời và khả năng thích nghi cao.  Trường cũng hướng đến tăng cường tính cạnh tranh của sinh viên trong môi trường toàn cầu năng động. Đại học Hoa Sen đặt tại Thành phố Hồ Chí Minh.
    </string>
    <string name="title_activity_measure_accessibility">Đo khả năng tiếp cận</string>
    <string name="measure_accessibility_button">Lựa chọn</string>
    <string name="add_location_dialog_userphone">Số điện thoại</string>
    <string name="add_location_dialog_password">Mật khẩu</string>
    <string name="add_location_dialog_contributor">Người dùng</string>
    <string name="add_location_dialog_admin">Quản lý</string>
    <string name="add_location_dialog_title">Xác nhận thông tin</string>
    <string name="dialog_error_title">Lỗi</string>
    <string name="dialog_error_description">Kiểm tra lại thông tin nhập của bạn</string>
    <string name="dialog_cancel_button">Huỷ</string>
    <string name="dialog_shared_success">Bạn đã chia sẻ địa điểm thành công</string>
    <string name="dialog_delete_title">Xoá</string>
    <string name="dialog_delete_description">Bạn có chắc muốn xoá ?</string>
</resources>
