<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:gravity="bottom">
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="3 km"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_language_title_vi"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_language_title_en"/>

    </RadioGroup>
    <Button
        android:id="@+id/setting_button_place_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_location_category"/>
    <Button
        android:id="@+id/setting_button_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_update_button"/>
    <Button
        android:id="@+id/setting_button_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_setting_info_title"/>
    <Button
        android:id="@+id/setting_button_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_setting_help_title"
        android:onClick="onClick_helpButton"/>

</LinearLayout>