<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pham.accessmap.InfoActivity">


    <ImageView
        android:layout_width="220dp"
        android:layout_height="180dp"
        android:id="@+id/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/logo"
         />

    <LinearLayout
        android:layout_below="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/label_update_button"
            android:textColor="@color/iOS"
            android:onClick="onClick_Update"
         />
        <Button
            android:id="@+id/Share"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/label_share_button"
            android:textColor="@color/iOS"
            android:onClick="onClick_Share"
         />

        <Button
            android:id="@+id/Guide"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/iOS"
            android:text="@string/label_guide_button"
            android:onClick="onClick_Guide"
        />

     </LinearLayout>
</RelativeLayout>
